fixed erroneous whitespace in child elements of panels

--- a/app/assets/styles/partials/base/_typography.scss
+++ b/app/assets/styles/partials/base/_typography.scss
@@ -31,7 +31,7 @@ code {
 }
 
 ul {
-  margin-bottom: 1.5rem;
+  margin: 0 0 1rem;
   padding-left: 1.5rem;
 }
 
